--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "^14.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "superjson": "^1.13.1",
     "zod": "^3.22.4"
   },
