--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
         run: npm install
 
       - name: TypeScript Type Checking
-        run: npm run type-check
+        run: npm run typecheck
 
       - name: Run Lint
         run: npm run lint
